feat: Add department CRUD operation
