# server.js
@@ -23,5 +23,6 @@ app.get('/', (req, res) => {
 
 require("./routes/admin.routes")(app);
 require("./routes/student.routes")(app);
+require("./routes/department.routes")(app);
 
 app.listen(port, () => console.log(`Hello world app listening on port ${port}!`))
